# bloaty-wheel

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  DEPLOYMENT.md  MANIFEST.in  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
src/bloaty/: __init__.py
tests/: conftest.py  test_executable.py
